@@ -53,6 +53,19 @@
                     "value": 11
                 }
             ]
+        },
+        {
+            "name": "Standby",
+            "values": [
+                {
+                    "key": "StandbyEnabled",
+                    "value": 0
+                },
+                {
+                    "key": "StandbyDisabled",
+                    "value": 4
+                }
+            ]
         }
     ],
     "blocks": [
@@ -242,8 +255,19 @@
             "readSchedule": "update",
             "registerType": "holdingRegister",
             "description": "Charging current",
-            "unit": "A",
+            "unit": "1/10 A",
             "defaultValue": "0",
+            "access": "RW"
+        },
+        {
+            "id": "standby",
+            "address": 258,
+            "size": 1,
+            "type": "uint16",
+            "readSchedule": "init",
+            "registerType": "holdingRegister",
+            "description": "Standby function control",
+            "defaultValue": 0,
             "access": "RW"
         }
     ]
